--- a/Tarea1_P1/css/style.css
+++ b/Tarea1_P1/css/style.css
@@ -1,11 +1,11 @@
 body{
-    background-color: rgb(22, 175, 124);
+    background-color: rgb(149, 177, 39);
     color: black;
     font-family: 'Times New Roman', Times, serif;
     font-size: 30px;
 }
 .juego{
-    color: rgb(17, 146, 182);
+    color: rgb(72, 122, 135);
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 40px;
 }
@@ -38,4 +38,46 @@ dt{
     text-align: center;
     max-width: 800px;
     margin: 0 auto;
+}
+.clasespan{
+    color: blue;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 30px;
+}
+.boton{
+    color: rgb(6, 5, 16);
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 30px;
+    font-style: italic;
+    font-weight: bold;
+    border-radius: 5px;
+    cursor: pointer;
+    background-color: chocolate;
+}
+.home{
+    box-shadow: 0px 0px 30px black;
+    background-color: rgb(255, 255, 255);
+}
+
+p > h6{
+   color: aliceblue;
+   font-family: 'Times New Roman', Times, serif;
+   font-size: 30px; 
+}
+.flexStyle{
+    display: flex;
+    border: rgb(255, 255, 255);
+    border-style: double;
+    border-width: 3px ;
+    background-color: cornflowerblue;
+    justify-content: space-around;
+}
+.seccionRocket{
+    display: flex;
+    border: rgb(255, 255, 255);
+    border-style: double;
+    border-width: 3px ;
+    background-color: cornflowerblue;
+    justify-content: center;
+    max-width: fit-content;
 }
