--- a/Tarea1_P1/css/style.css
+++ b/Tarea1_P1/css/style.css
@@ -60,7 +60,7 @@ dt{
 }
 
 p > h6{
-   color: aliceblue;
+   color: rgb(0, 0, 0);
    font-family: 'Times New Roman', Times, serif;
    font-size: 30px; 
 }
@@ -73,11 +73,26 @@ p > h6{
     justify-content: space-around;
 }
 .seccionRocket{
-    display: flex;
-    border: rgb(255, 255, 255);
+    display: 30%;
+    border: rgb(0, 0, 0);
     border-style: double;
     border-width: 3px ;
-    background-color: cornflowerblue;
+    background-color: white;
     justify-content: center;
-    max-width: fit-content;
+    width: 30%;
+    color: black;
 }
+.tableStyle{
+    border-style: double;
+    border-color: black;
+}
+/*
+th{
+    border: 2px solid rgb(0, 0, 0);
+    background-color: rgb(28, 91, 142);
+}
+td{
+    border: 2px solid rgb(0, 0, 0);
+    background-color: rgb(253, 253, 253);
+}
+    */
