--- a/P1U1/css/tienda.css
+++ b/P1U1/css/tienda.css
@@ -11,6 +11,7 @@ h1 {
 .cabezera {
     background-color: rgb(16, 110, 33);
     padding: 10px 0;
+    position: sticky;
 }
 
 .titulo {
@@ -109,16 +110,17 @@ h1 {
     color: white;
 }
 .chatbot {
-    width: 20%;
+    width: 40%;
     background-color: rgb(255, 255, 255);
     color: white;
     display: flex;
     flex-direction: column;
     position: sticky;
-    right: 10%;
-    top: 10%;
+    right: 0%;
+    top: 30%;
+    left: 70%;
     padding: 10px;
-    height: 420px;
+    height: 360px;
     border:solid black;
 }
 
@@ -156,4 +158,18 @@ h1 {
 
 .panel2{
     flex-direction: column;
+    width: 40%;
+}
+.panel3{
+    flex-direction: column;
+    width: 40%;
+    right: 40%;
+}
+.chatbot-text{
+    color: black;
+}
+.principal{
+    position: sticky;
+    right: 0%;
+    top: 0%;
 }
